# xetra

./: .gitignore  Dockerfile  Makefile  README.md  config.json  project.env  pyproject.toml
.github/workflows/: build-and-apply-prefect-flow.yaml  deploy-agent.yaml  deploy-flow.yaml
Dockerfiles/: agent.Dockerfile  flows.Dockerfile
blocks/: create_config.py  create_gcp_bucket.py  create_gcp_credenials.py
config/: datasets_loaded.csv  history_dataload.json
dbt/xetra/: .gitignore  dbt_project.yml
dbt/xetra/models/core/: fact_xetra_stocks.sql  schema.yml
dbt/xetra/models/staging/: schema.yml  stg_xetra_stocks.sql
notebook/: Xetra_data_analysis.ipynb
scripts/: gcs_to_bq.py  local_to_gcs.py  prefect_flow_via_docker.py
terraform/: artifact-registry.tf  compute.tf  variables.tf
utilities/: setup_vm.sh
